ci/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keyguard
  labels:
    app: keyguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keyguard
  template:
    metadata:
      labels:
        app: keyguard
    spec:
      containers:
        - name: app
          image: cromega/keyguard:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: private-key
              mountPath: "/etc/keyguard"
              readOnly: true
      volumes:
        - name: private-key
          secret:
            secretName: keyguard-private-key
            defaultMode: 0600
