ci/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: keyguard
spec:
  selector:
    app: keyguard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
