ci/k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: keyguard
spec:
  rules:
  - host: key.platform.sublimia.nl
    http:
      paths:
      - backend:
          serviceName: keyguard
          servicePort: 80
